<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solution"
        android:textSize="32dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/result"
        android:layout_margin="16dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:textSize="64dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/buttons_layout"
        android:layout_margin="16dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons_layout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        tools:ignore="MissingConstraints"
        android:background="#EFEDED"
        android:paddingVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_c"
                android:text="@string/button_c"
                android:layout_margin="12dp"
                android:backgroundTint="#F44336"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_openBrac"
                android:text="@string/button_openBrac"
                android:layout_margin="12dp"
                android:backgroundTint="#0F875C"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_closeBrac"
                android:text="@string/button_closeBrac"
                android:layout_margin="12dp"
                android:backgroundTint="#0F875C"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_divide"
                android:text="@string/button_divide"
                android:layout_margin="12dp"
                android:backgroundTint="#FF5722"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_7"
                android:text="@string/button_7"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_8"
                android:text="@string/button_8"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_9"
                android:text="@string/button_9"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_multiply"
                android:text="@string/button_multiply"
                android:layout_margin="12dp"
                android:backgroundTint="#FF5722"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_4"
                android:text="@string/button_4"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_5"
                android:text="@string/button_5"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_6"
                android:text="@string/button_6"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_minus"
                android:text="@string/button_minus"
                android:layout_margin="12dp"
                android:backgroundTint="#FF5722"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_1"
                android:text="@string/button_1"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_2"
                android:text="@string/button_2"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_3"
                android:text="@string/button_3"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_plus"
                android:text="@string/button_plus"
                android:layout_margin="12dp"
                android:backgroundTint="#FF5722"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:id="@+id/button_ac"
                android:text="@string/button_AC"
                android:layout_margin="12dp"
                android:backgroundTint="#F44336"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_0"
                android:text="@string/button_0"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_point"
                android:text="@string/button_point"
                android:layout_margin="12dp"
                android:backgroundTint="#8BC34A"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:id="@+id/button_equal"
                android:text="@string/button_equal"
                android:layout_margin="12dp"
                android:backgroundTint="#FF5722"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>